Remove .navbar-collapse borders

--- a/css/style.css
+++ b/css/style.css
@@ -6334,6 +6334,13 @@ body {
     background-color: #981e32; } }
 
 /* Credit goes to: https://work.smarchal.com/twbscolor/ */
+/* Navbar mobile */
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+  border-top: 0;
+  border-bottom: 0;
+  box-shadow: none; }
+
 /* Search */
 #bs-header-navbar-collapse-1 > form > div > input,
 #bs-header-navbar-collapse-1 > form > button {
