--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -86,20 +86,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-header-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About</a></li>
+        <!-- <li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About</a></li> -->
         <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions">Admissions</a></li>
         <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
         <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/resources-current-students">Students</a></li>
         <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li>
         <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni</a></li>
-      </ul>
-      <form class="navbar-form navbar-right">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Enter keywords">
-        </div>
-        <button type="submit" class="btn btn-default">Search</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -114,6 +106,12 @@
           </ul>
         </li>
       </ul>
+      <form class="navbar-form navbar-right">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Enter keywords">
+        </div>
+        <button type="submit" class="btn btn-default">Search</button>
+      </form>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
