--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -90,7 +90,7 @@
         <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions">Admissions</a></li>
         <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions/degrees-majors-and-programs">Degrees</a></li>
         <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/resources-current-students">Students</a></li>
-        <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li>
+        <!-- <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li> -->
         <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources <span class="caret"></span></a>
@@ -108,9 +108,9 @@
       </ul>
       <form class="navbar-form navbar-right">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Enter keywords">
+          <input type="text" class="form-control" placeholder="Search this site">
         </div>
-        <button type="submit" class="btn btn-default">Search</button>
+        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
       </form>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
