--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -120,7 +120,7 @@
 
 <div class="header-logo">
   <div class="col-md-12">
-    <img class="primary-logo" src="https://www.vancouver.wsu.edu/sites/www.vancouver.wsu.edu/themes/omegawsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="Washington State University Vancouver logo">
+    <a href="https://www.vancouver.wsu.edu"><img class="primary-logo" src="https://www.vancouver.wsu.edu/sites/www.vancouver.wsu.edu/themes/omegawsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="Washington State University Vancouver logo"></a>
   </div>
 </div>
 
