--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -97,7 +97,20 @@ $dropDown: false;
   text-decoration: underline;
 }
 
-/* Navbar mobile menu */
+#bs-primary-navbar-collapse-1 > div > form > div > input {
+    border: none;
+    font-size: 15px;
+}
+
+#bs-primary-navbar-collapse-1 > div > form > div > div > button {
+    border: 1px solid $white;
+}
+
+#bs-primary-navbar-collapse-1 > div > form  {
+    margin-right: 20px;
+}
+
+/* Navbar mobile */
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
   border-top: 0;
@@ -105,32 +118,13 @@ $dropDown: false;
   box-shadow: none;
 }
 
-/* Search */
-
-#bs-header-navbar-collapse-1 > form > div > input,
-#bs-header-navbar-collapse-1 > form > button {
-  border: 0;
-  box-shadow: none;
-  font-size: 15px;
-}
-
-#bs-header-navbar-collapse-1 > form > div > input {
-  margin-left: 15px;
-}
-
-#bs-header-navbar-collapse-1 > form > button {
-  margin-right: 30px;
-  background-color: $brand-primary;
-  color: $white;
-}
-
 @media (max-width: 767px) {
-  #bs-header-navbar-collapse-1 > form > div > input {
-    width: 82%;
+  #bs-primary-navbar-collapse-1 > div > form {
+    margin-right: 30px;
+    margin-left: 15px;
   }
-  #bs-header-navbar-collapse-1 > form > button {
-    float: right;
-    margin-top: -40px;
+  #bs-primary-navbar-collapse-1 > ul > li.dropdown.open > ul > li > a:hover {
+    text-decoration: underline;
   }
 }
 
