--- a/css/style.css
+++ b/css/style.css
@@ -6335,18 +6335,52 @@ body {
     background-color: #981e32; } }
 
 /* Credit: https://work.smarchal.com/twbscolor/ */
+img.horizontal-logo {
+  display: none; }
+
 .nav > li > a:hover {
   text-decoration: underline; }
 
-#bs-primary-navbar-collapse-1 > div > form > div > input {
-  border: none;
-  font-size: 15px; }
-
-#bs-primary-navbar-collapse-1 > div > form > div > div > button {
-  border: 1px solid #fff; }
-
 #bs-primary-navbar-collapse-1 > div > form {
   margin-right: 20px; }
+
+#bs-primary-navbar-collapse-1 .input-group {
+  background: #981e32; }
+
+#bs-primary-navbar-collapse-1 > div > form > div > input {
+  border: none;
+  font-size: 15px;
+  background: #981e32;
+  color: #fff;
+  border-top: 0;
+  border-bottom: 1px solid #fff;
+  box-shadow: none; }
+
+#bs-primary-navbar-collapse-1 ::-webkit-input-placeholder {
+  /* Chrome */
+  color: #fff; }
+
+#bs-primary-navbar-collapse-1 :-ms-input-placeholder {
+  /* IE 10+ */
+  color: #fff; }
+
+#bs-primary-navbar-collapse-1 ::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #fff;
+  opacity: 1; }
+
+#bs-primary-navbar-collapse-1 :-moz-placeholder {
+  /* Firefox 4 - 18 */
+  color: #fff;
+  opacity: 1; }
+
+#bs-primary-navbar-collapse-1 > div > form > div > div > button {
+  border: none;
+  color: #fff;
+  background: #981e32; }
+
+#bs-primary-navbar-collapse-1 > div > form > div > div > button:hover {
+  background: none; }
 
 /* Navbar mobile */
 .navbar-default .navbar-collapse,
@@ -6356,6 +6390,10 @@ body {
   box-shadow: none; }
 
 @media (max-width: 767px) {
+  img.horizontal-logo {
+    margin-top: 5px;
+    height: 40px;
+    display: block; }
   #bs-primary-navbar-collapse-1 > div > form {
     margin-right: 30px;
     margin-left: 15px; }
