--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -78,7 +78,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <!-- <a class="navbar-brand" href="#">Company Name</a> -->
+        <a class="navbar-brand" href="https://vancouver.wsu.edu"> <a href="https://www.vancouver.wsu.edu"><img class="horizontal-logo" src="https://www.vancouver.wsu.edu/sites/www.vancouver.wsu.edu/themes/omegawsuv/images/wsu-vancouver-horizontal-logo-rgb.svg" alt="Washington State University Vancouver logo"></a></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-primary-navbar-collapse-1">
         <ul class="nav navbar-nav">
