--- a/css/style.css
+++ b/css/style.css
@@ -6341,6 +6341,14 @@ img.horizontal-logo {
 .nav > li > a:hover {
   text-decoration: underline; }
 
+.menu-bar {
+  font-size: 10px;
+  color: #fff; }
+
+body > nav > div.navbar-header > button {
+  margin-top: -5px;
+  margin-bottom: -10px; }
+
 #bs-primary-navbar-collapse-1 > div > form {
   margin-right: 20px; }
 
