--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -74,13 +74,13 @@
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-primary-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
+            <span class="menu-bar">Menu</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="https://vancouver.wsu.edu"> <a href="https://www.vancouver.wsu.edu"><img class="horizontal-logo" src="https://www.vancouver.wsu.edu/sites/www.vancouver.wsu.edu/themes/omegawsuv/images/wsu-vancouver-horizontal-logo-rgb.svg" alt="Washington State University Vancouver logo"></a></a>
     </div>
-    <div class="collapse navbar-collapse" id="bs-primary-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="bs-primary-navbar-collapse-1" tabindex="1">
         <ul class="nav navbar-nav">
             <!-- <li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About</a></li> -->
             <li><a href="https://studentaffairs.vancouver.wsu.edu/admissions">Admissions</a></li>
@@ -104,9 +104,9 @@
         </ul>
         <div class="col-sm-3 col-md-3 pull-right">
             <form class="navbar-form" role="search">
-                <div class="input-group">
+                <div class="input-group" tabindex="2">
                     <input type="text" class="form-control" placeholder="Search this site" name="q">
-                    <div class="input-group-btn">
+                    <div class="input-group-btn" aria-hidden="true">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
