--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -294,3 +294,10 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > sect
     letter-spacing: 1px;
   }
 }
+
+@media (max-width: 767px) {
+  body > div.footer-sitemap > div:nth-child(3),
+  body > div.footer-sitemap > div:nth-child(4) {
+    display: none;
+  }
+}
