--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -105,7 +105,7 @@
         <div class="col-sm-3 col-md-3 pull-right">
             <form class="navbar-form" role="search">
                 <div class="input-group" tabindex="2">
-                    <input type="text" class="form-control" placeholder="Search this site" name="q">
+                    <input type="text" class="form-control" placeholder="Search" name="q">
                     <div class="input-group-btn" aria-hidden="true">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
